<resources>
    <string name="app_name">Corona Widget</string>
    <string name="Heading">CORONAVIRUS DATA</string>
    <string name="total_case">Confirmed</string>


    <string name="country">INDIA</string>
    <string name="date">Date</string>
    <string name="recovered">Recovered</string>
    <string name="death">Deceased</string>
    <string name="source">Source: covid19india.org</string>
    <string name="conclusion">Thank You for using our app!</string>
    <string name="creator">Creator: Kundan Jha</string>
    <string name="button">Button</string>
    <string name="heding">heding</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="coronvirus_graphical_data">Coronvirus Graphical Data</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="total_active">Total Active</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="total_death">Total Death</string>
    <string name="india">INDIA</string>
    <string name="textViewWorld">WORLD</string>
    <string name="textViewtCase">Confirmed</string>
    <string name="textViewtRec">Recovered</string>
    <string name="textViewtDeath">Deceased</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
