<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:layout_gravity="center"
        tools:context=".MainActivity">


    <TextView
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="#ECE7E7"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="167dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="167dp"
            />

    <TextView
            android:text="@string/total_case"
            android:layout_width="wrap_content"
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="115dp"
            android:textColor="#F8F3F3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="149dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="153dp"
            />
    <TextView
            android:text="@string/Heading"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="77dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="79dp"/>

    <TextView
            android:text="@string/recovered"
            android:textSize="10sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="220dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="65dp"
            />

    <TextView
            android:text="@string/death"
            android:textSize="10sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="65dp"
            />

    <TextView
            android:text="TextView"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            android:layout_marginEnd="120dp"
            />

    <TextView

            android:text="TextView"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            />

    <TextView
            android:text="TextView"
            android:textSize="11sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            android:layout_marginEnd="148dp"
            />

    <TextView
            android:text="TextView"
            android:textSize="11sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="98dp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            />

    <TextView
            android:text="TextView"
            android:textSize="11sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="177dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="175dp"
            />

    <TextView
            android:text="@string/country"
            android:textSize="18sp"
            android:fontFamily="@font/cambo"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginTop="130dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="201dp"
            />

    <TextView
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="160dp"
            />

    <TextView
            android:text="@string/source"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="280dp"
            />

    <TextView
            android:text="@string/conclusion"
            android:textSize="25sp"
            android:textColor="#363871"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="95dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="95dp"
            />

    <TextView
            android:text="@string/creator"
            android:fontFamily="@font/cambo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:textSize="11sp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>